Small spacing issues, added .jpg

--- a/slash-unmute-all/Styling.CSS
+++ b/slash-unmute-all/Styling.CSS
@@ -1,29 +1,30 @@
-html{line-height: }
-header{background-color:#dedfe0;
+html{line-height:}
+
+header{
+	background-color:#dedfe0;
     text-align: left;
     padding-left: 10%;
-    padding-right: 8%;
-    }
+    padding-right: 8%;}
 
-body{background-color: #dedfe0;
-color:black;
-}
+body{
+	background-color: #dedfe0;
+	color:black;}
 
 ul,li{
-background-color: black;
-color:black;}
+	background-color: black;
+	color:black;}
 
 li{
-    background-color: #dedfe0;
-display:inline;
-padding:20px 20px;
-float: right;
-display: block;
-color:#dedfe0;
-text-align:justify;
-font-family:monospace;
-font-size: 17px;
-font-color:black}
+	background-color: #dedfe0;
+	display:inline;
+	padding:20px 20px;
+	float: right;
+	display: block;
+	color:#dedfe0;
+	text-align:justify;
+	font-family:monospace;
+	font-size: 17px;
+	font-color:black}
 
 a{color: black;
 text-align: center;
@@ -129,41 +130,32 @@ button:hover:before,button:hover:after{
 background-color: #dedfe0;
 display:inline;
 padding:20px 20px;
-float: left;
-display: block;
+float:left;
+display:block;
 color:#dedfe0;
 text-align:justify;
 font-family:monospace;
-font-size: 17px;
-font-color:black}
-
-
-
+font-size:17px;
+font-color:black;}
 
 .logo{content: url(images/nonlogo.png);
-height: 120px;
-width: 120px;}
-.logo:hover{content: url(images/logo.png);}
+height:120px;
+width:120px;}
+.logo:hover{content:url(images/logo.png);}
 
 .home{content: url("images/home%20icon.png");
-height: 30px;
-width:30px;}
+height:25px;
+width:25px;}
 
 .home:hover{content: url("images/home%20icon_h.png");
-height: 30px;
-width:30px;}
+height:25px;
+width:25px;}
 
 .portrait{padding-left: 15%;
 padding-top: 0%;
 padding-bottom: 5%;}
     
-.home{content: url("images/home%20icon.png");
-height: 30px;
-width:30px;}
 
-.home:hover{content: url("images/home%20icon_h.png");
-height: 30px;
-width:30px;}
 
 * {
   box-sizing: border-box;
